2022/9/1 04:23 拡張パターン（横スクロール）の設定が上手くいかない。

--- a/index.html
+++ b/index.html
@@ -26,27 +26,29 @@
 </head>
 
 <body>
-  <div class="horizontal-table">
-    <table class="horizontal-table__inner">
-      <tbody class="horizontal-table__body">
-        <tr class="horizontal-table__row">
-          <th class="horizontal-table__header">名前</th>
-          <td class="horizontal-table__text">半田　篤志</td>
-        </tr>
-        <tr class="horizontal-table__row">
-          <th class="horizontal-table__header">所属</th>
-          <td class="horizontal-table__text">株式会社２４−７／株式会社パンセ</td>
-        </tr>
-        <tr class="horizontal-table__row">
-          <th class="horizontal-table__header">職種</th>
-          <td class="horizontal-table__text">テクニカルディレクタ／シニアエンジニア</td>
-        </tr>
-        <tr class="horizontal-table__row">
-          <th class="horizontal-table__header">得意分野</th>
-          <td class="horizontal-table__text">css設計、HubSpot CMS</td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="horizontal-table horizontal-table--md-scroll">
+    <div class="horizontal-table">
+      <table class="horizontal-table__inner">
+        <tbody class="horizontal-table__body">
+          <tr class="horizontal-table__row">
+            <th class="horizontal-table__header">名前</th>
+            <td class="horizontal-table__text">半田　篤志</td>
+          </tr>
+          <tr class="horizontal-table__row">
+            <th class="horizontal-table__header">所属</th>
+            <td class="horizontal-table__text">株式会社２４−７／株式会社パンセ</td>
+          </tr>
+          <tr class="horizontal-table__row">
+            <th class="horizontal-table__header">職種</th>
+            <td class="horizontal-table__text">テクニカルディレクタ／シニアエンジニア</td>
+          </tr>
+          <tr class="horizontal-table__row">
+            <th class="horizontal-table__header">得意分野</th>
+            <td class="horizontal-table__text">css設計、HubSpot CMS</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </body>
 
