--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </tr>
           <tr class="horizontal-table__row">
             <th class="horizontal-table__header">所属</th>
-            <td class="horizontal-table__text">株式会社２４−７／株式会社パンセ</td>
+            <td class="horizontal-table__text">株式会社２４−７／株式会社パンセ株式会社２４−７／株式会社パンセ</td>
           </tr>
           <tr class="horizontal-table__row">
             <th class="horizontal-table__header">職種</th>
